--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,8 +4,8 @@
     <item android:id="@+id/preference"
         android:title="preference"
         />
-    <item android:title="blur"
-        android:id="@+id/blur"
+    <item android:title="Undo"
+        android:id="@+id/undoItem"
         />
     <item android:id="@+id/saveImage"
         android:title="Save Image"
